--- a/IT Project.html
+++ b/IT Project.html
@@ -18,7 +18,7 @@
 <div><img src="system.jpg" alt="system"/></div> 
 <div><img src="system2.jpg" alt="system2"/></div> 
 
-<p>The purpose of this ITP is to protect users' normal use of servers and cloud servers.</p>
+<p>The purpose of this IT Project is to protect users' normal use of servers and cloud servers.</p>
 <p>First, Internet cloud provides services to Internet service providers</p>
 <p>Second, the Internet service provider then reaches the router through modem andfirewall</p>
 <p>Third, router allows users to choose independently</p>
