--- a/IT Project.html
+++ b/IT Project.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>CodePen - A Pen by Holland</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="icon" href="favicon.ico">
 
 <nav>
 <ul>
